<resources>
    <string name="app_name">Rooster</string>

    <string name="school">School</string>
    <string name="code">Code</string>
    <string name="login">Inloggen</string>

    <string name="code_invalid">Deze code is ongeldig</string>
    <string name="code_invalid_length">De code bestaat uit 12 cijfers</string>

    <string name="login_help">Ga naar amstelveencollege.zportal.nl, log daar in en kies vervolgens in de rode balk de onderste optie. Klik daarna op "Koppel App". Er verschijnt nu een code in beeld, deze moet hierboven eenmalig ingevoerd worden.</string>

    <string name="title_activity_main">Mijn rooster</string>
    <string name="title_fragment_announcements">Mededelingen</string>
    <string name="title_fragment_friends">Vrienden</string>

    <string name="title_activity_login">Inloggen</string>
    <string name="title_activity_preferences">Instellingen</string>

    <string name="relogin">Je moet opnieuw inloggen</string>
    <string name="rights">Je hebt geen rechten om dit te kunnen zien</string>
    <string name="user_existance">Deze gebruiker bestaat niet</string>
    <string name="offline">Je bent op dit moment niet online</string>
    <string name="retry">Opnieuw proberen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_title">Zoeken</string>
    <string name="search_hint">Zoeken naar andere roosters</string>
    <string name="refresh_title">Vernieuwen</string>
    <string name="today_title">Vandaag</string>
    <string name="star_title">Als vriend toe voegen</string>

    <string name="nav_preferences">Instellingen</string>
    <string name="nav_info">Over</string>

    <string name="my_schedule">Mijn rooster</string>

    <string name="more_info">Meer informatie</string>
    <string name="change">Wijzigingen</string>
    <string name="teacher">Docent</string>
    <string name="classRoom">Lokaal</string>
    <string name="group">Klas</string>

    <!--Tutorial-->
    <string name="tutorial">Uitleg</string>
    <string name="tutorial_text">
        <![CDATA[
        <b>WAARSCHUWING</b>: deze app is onofficieel en nog in ontwikkeling.<br><br>

        Op het rooster worden je normale vakken aangegeven in het wit.<br><br>
        Het vak dat je nu hebt zal een donkerdere kleur hebben en het vak dat in de komende 10 minuten begint zal ook iets donkerder zijn.<br><br>

        Bij <b>uitval</b> wordt dit aangegeven met <font color=#ff5722>rood</font>, ook zal de naam van het vak doorgestreept zijn.<br><br>
        Bij een <b>wijziging</b> zal het aangegeven worden met <font color=#2196f3>blauw</font>.<br><br>
        <b>Toetsen</b> in de toetsweek worden aangeven met <font color=#ff9800>oranje</font>.<br><br>
        <b>Activiteiten</b> zullen aangegeven worden met <font color=#cddc39>groen</font>.<br><br>

        Als je een <b>overzicht</b> wilt zien van je rooster dan kan dit door je telefoon een kwartslag te draaien.<br><br>

        Het is ook mogelijk om te <b>zoeken</b> naar de roosters van andere, op dit moment kan dit alleen door het leerlingnummer/docentcode in te voeren.<br><br>
        Vervolgens kan je deze persoon als <b>vriend</b> toevoegen door op de ster te klikken, vervolgens verschijnt deze persoon onder vrienden.
        ]]>
    </string>

    <string name="update">Wat is er nieuw</string>
    <string name="update_text">
        Je kan nu ook je rooster zien als je offline bent.\n\n
        Het is vanaf nu weer mogelijk om de roosters van andere te kunnen bekijken, helaas heb je hier op dit moment wel het leerling nummer voor nodig. \n\n
        Ook is het vanaf nu mogelijk om andere mensen als vriend toe te voegen door op de ster te drukken.
    </string>

    <!--About-->
    <string name="about">Over</string>
    <string name="about_text">
        Dit is een onofficiële rooster app voor het Amstelveen College. \n\n
        Ontwerp: \n
        Bas Hünneman \n
        Mats Bulterman \n\n
        Markt onderzoek: \n
        Gert Hartzema \n
        Xavier van Dommelen \n\n
        Framework: \n
        Auke Scheepstra \n
        Tim Huizinga \n\n
        App: \n
        Tim Huizinga\n\n
    </string>
    <string name="ok">OK</string>
    <string name="contact">Contact</string>
    <string name="send">Bericht verzenden</string>

    <!--Friends-->
    <string name="addFriend">Wat is de naam van deze vriend?</string>
    <string name="name">Naam</string>
    <string name="newName">Nieuwe naam</string>
    <string name="edit">Bewerken</string>
    <string name="cancel">Annuleren</string>
    <string name="remove">Verwijderen</string>
    <string name="alreadyFriends">Deze persoon staat al in je vriendenlijst.</string>
    <string name="selfFriends">Je kan jezelf niet als vriend toevoegen.</string>

    <!--Weekdays-->
    <string name="day_mon">Maandag</string>
    <string name="day_tue">Dinsdag</string>
    <string name="day_wed">Woensdag</string>
    <string name="day_thu">Donderdag</string>
    <string name="day_fri">Vrijdag</string>

    <string name="week">Week</string>

    <!--Months-->
    <string name="month_jan">januari</string>
    <string name="month_feb">februari</string>
    <string name="month_mar">maart</string>
    <string name="month_apr">april</string>
    <string name="month_may">mei</string>
    <string name="month_jun">juni</string>
    <string name="month_jul">juli</string>
    <string name="month_aug">augustus</string>
    <string name="month_sep">september</string>
    <string name="month_oct">oktober</string>
    <string name="month_nov">november</string>
    <string name="month_dec">december</string>

    <!--Crash reporting-->
    <string name="crash_toast_text">Crash rapport verstuurd.</string>

</resources>
