<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/group1" >
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/title_activity_main" />
        <!--<item-->
            <!--android:id="@+id/nav_announcements"-->
            <!--android:icon="@drawable/ic_announcements"-->
            <!--android:title="@string/title_fragment_announcements" />-->
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/title_fragment_friends" />
    </group>

    <group
        android:checkableBehavior="none"
        android:id="@+id/group2" >
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="@string/nav_info" />
    </group>

</menu>
